fix: fix user route password handling
